--- a/cosmetics-fashion-house-clone/src/Components/Navbar.module.css
+++ b/cosmetics-fashion-house-clone/src/Components/Navbar.module.css
@@ -1,15 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.container{
+.container {
     max-width: 100%;
     height: auto;
     /* border: 1px solid black; */
 }
 
-.top{
+.top {
     width: 100%;
     height: 40px;
     display: flex;
@@ -17,11 +17,11 @@
     border: 0px solid rgb(191, 190, 190);
 }
 
-.sidebar_top{
+.sidebar_top {
     width: 25%;
     display: flex;
     justify-content: space-around;
-    height: 35px;
+    height: 25px;
     margin: auto 0px;
 }
 
@@ -33,32 +33,40 @@
 
 }
 
-.top_child_3{
-    margin: 5px 2px;
+.top_child_3 {
+    margin: 9px 2px;
 }
 
-.top_child:hover{
+.top_child:hover {
     border-bottom: 2px solid black;
 }
 
-.top_child_3:hover{
+.top_child_3:hover {
     border-bottom: 2px solid black;
 }
 
-.header_bottom{
+.header_bottom {
     width: 100%;
-    height: 120px;
+    height: 75px;
     display: flex;
     justify-content: space-between;
-    border: 1px solid black;
 }
-.header_bottom_ch{
-    border: 1px solid red;
+
+.header_bottom_ch {
+    /* border: 1px solid red; */
     height: 50px;
     margin: 20px 40px;
 }
 
-.fa-bag-shopping{
-    width: 20px;
-    height: 20px;
+
+.navlinks {
+    display: flex;
+    border-bottom: 1px solid rgb(195, 192, 192);
+    justify-content: space-around;
+    height: 40px;
 }
+
+.linkHover:hover {
+    border-bottom: 2.5px solid black;
+}
+
